arrumando bugs